the-project/todos/manifests/traefik-middleware.yaml
apiVersion: traefik.io/v1alpha1
kind: Middleware
metadata:
  name: strip-api
  namespace: project
spec:
  stripPrefix:
    prefixes:
      - /api
