the-project/todos/manifests/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: the-project-todos
  namespace: project
spec:
  replicas: 1
  selector:
    matchLabels:
      app: the-project-todos
  template:
    metadata:
      labels:
        app: the-project-todos
    spec:
      volumes:
        - name: shared-data
          persistentVolumeClaim:
            claimName: shared-data-pvc
      containers:
        - name: the-project-todos
          image: daduam/dwk-the-project-todos
          imagePullPolicy: IfNotPresent
          volumeMounts:
            - name: shared-data
              mountPath: /app/data
