the-project/todos/manifests/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: the-project-todos-svc
  namespace: project
spec:
  type: ClusterIP
  selector:
    app: the-project-todos
  ports:
    - port: 1234
      protocol: TCP
      targetPort: 8081
