the-project/todos/manifests/service.yml
apiVersion: v1
kind: Service
metadata:
  name: the-project-todos-svc
spec:
  type: NodePort
  selector:
    app: the-project-todos
  ports:
    - name: http
      nodePort: 30080
      protocol: TCP
      port: 1234
      targetPort: 8080
